@@ -2553,8 +2553,14 @@ void update_logging(void)
 
 	if (daemonize) {
 		log_opts.stderr_level = LOG_LEVEL_QUIET;
-		if (slurmctld_conf.slurmctld_logfile)
+		if (!slurmctld_conf.slurmctld_logfile &&
+		    (slurmctld_conf.slurmctld_syslog_debug == LOG_LEVEL_QUIET)){
+			/* Insure fatal errors get logged somewhere */
 			log_opts.syslog_level = LOG_LEVEL_FATAL;
+		} else {
+			log_opts.syslog_level =
+				slurmctld_conf.slurmctld_syslog_debug;
+		}
 	} else
 		log_opts.syslog_level = LOG_LEVEL_QUIET;
 
