@@ -63,6 +63,11 @@ documents those changes that are of interest to users and administrators.
     * Add some regression tests.
     * Add srun pack job environment variables when performing job allocation.
  -- Set Reason=dependency over Reason=JobArrayTaskLimit for pending jobs.
+ -- Add slurm.conf configuration parameters SlurmctldSyslogDebug and
+    SlurmdSyslogDebug to control which messages from the slurmctld and slurmd
+    daemons get written to syslog.
+ -- Add slurmdbd.conf configuration parameter DebugLevelSyslog to control which
+    messages from the slurmdbd daemon get written to syslog.
 
 * Changes in Slurm 17.11.0pre1
 ==============================
